--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : Your Name
+title                    : Izzy Cowan
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : Your Name
-description              : Your Name - Projects and CV 
+name                     : Izzy Cowan
+description              : Izzy Cowan - Projects and CV 
 baseurl                  : "" # Set this to your repo name 
 
 # Theme and Style
